# Kii-RWA-Protocol

./: .gitignore  Cargo.toml  README.md  contracts-review.md
.cargo/: config.toml
.github/workflows/: rust.yml
contracts/: RWA.sol
contracts/agent-roles/: Cargo.toml
contracts/agent-roles/src/: contract.rs  helpers.rs  msg.rs  state.rs
contracts/claim-topics/: Cargo.toml
contracts/claim-topics/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/compliance/: Cargo.toml
contracts/compliance-claims/: Cargo.toml
contracts/compliance-claims/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/compliance-country-restriction/: Cargo.toml
contracts/compliance-country-restriction/src/: contract.rs  msg.rs
contracts/compliance-registry/: Cargo.toml
contracts/compliance-registry/src/: contract.rs  msg.rs
contracts/compliance-whitelist-wrapper/: Cargo.toml  README.md
contracts/compliance-whitelist-wrapper/src/: contract.rs  error.rs  msg.rs
contracts/compliance-wrapper/: Cargo.toml
contracts/compliance-wrapper/src/: contract.rs  msg.rs  state.rs
contracts/compliance/src/: contract.rs  lib.rs  state.rs
contracts/compliance/src/modules/: mod.rs
contracts/compliance/src/registry/: contract.rs  helpers.rs  mod.rs  msg.rs  state.rs
contracts/cw20-base/: Cargo.toml
contracts/cw20-base/src/: allowances.rs  contract.rs  enumerable.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/cw20-ics20/src/: contract.rs  ibc.rs  test_helpers.rs
contracts/factory/: Cargo.toml
contracts/on_chain_id/: Cargo.toml
contracts/on_chain_id/src/: claim_management.rs  contract.rs  error.rs  helpers.rs  identity.rs  identity_management.rs  key_management.rs  lib.rs  msg.rs  state.rs  types.rs  utils.rs
contracts/owner-roles/: Cargo.toml
contracts/owner-roles/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/registery/: Cargo.toml
contracts/registery/src/: lib.rs
contracts/registery/src/claim_topics/: contract.rs  error.rs  helpers.rs  msg.rs  state.rs
contracts/registery/src/identity/: contract.rs  error.rs  mod.rs  (+2 more)
contracts/roles/: Cargo.toml
contracts/roles/src/: lib.rs  role_management.rs
contracts/trusted-issuers/: Cargo.toml
contracts/trusted-issuers/src/: contract.rs  error.rs  lib.rs  msg.rs
examples/: example.js
integration-tests/: .gitignore  package.json  setup_local.sh  setup_sei.sh
integration-tests/tests/: cw3643-full-test.js  utils.js
scripts/: balance.py  common.py  compliance_setup.py  config.py  deploy.js  deploy.py  manager.py  manager_setup.py  new_trex.py  transfer.py  user_setup.py
src/: abi.json  index.js
(+27 files in other folders)
